feat: remove automated tagging and introduce a group for QA

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,31 +9,33 @@ cache:
   size: "100g"
 
 steps:
-  - name: ":golangci-lint: lint"
-    command: golangci-lint run --verbose --timeout 3m
-    plugins:
-      - docker-compose#v5.9.0:
-          config: .buildkite/docker-compose.yaml
-          run: golangci-lint
-          tty: true
+  - group: ":mag: Quality Checks"
+    key: quality-checks
+    steps:
+    - name: ":golangci-lint: lint"
+      command: golangci-lint run --verbose --timeout 3m
+      plugins:
+        - docker-compose#v5.9.0:
+            config: .buildkite/docker-compose.yaml
+            run: golangci-lint
+            tty: true
 
-  - name: ":go: test"
-    artifact_paths:
-      - cover-tree.svg
-    commands:
-      - go test -coverprofile cover.out ./...
-      - go run github.com/nikolaydubina/go-cover-treemap@latest -coverprofile cover.out > cover-tree.svg
-      - echo '<details><summary>Coverage tree map</summary><img src="artifact://cover-tree.svg" alt="Test coverage tree map" width="70%"></details>' | buildkite-agent annotate --style "info"
-    plugins:
-      - docker-compose#v5.9.0:
-          config: .buildkite/docker-compose.yaml
-          run: golangci-lint
-          tty: true
-          mount-buildkite-agent: true
-
-  - wait
+    - name: ":go: test"
+      artifact_paths:
+        - cover-tree.svg
+      commands:
+        - go test -coverprofile cover.out ./...
+        - go run github.com/nikolaydubina/go-cover-treemap@latest -coverprofile cover.out > cover-tree.svg
+        - echo '<details><summary>Coverage tree map</summary><img src="artifact://cover-tree.svg" alt="Test coverage tree map" width="70%"></details>' | buildkite-agent annotate --style "info"
+      plugins:
+        - docker-compose#v5.9.0:
+            config: .buildkite/docker-compose.yaml
+            run: golangci-lint
+            tty: true
+            mount-buildkite-agent: true
 
   - label: ":terminal: build ({{matrix}})"
+    depends_on: quality-checks
     matrix:
       - "darwin"
       - "linux"
@@ -56,28 +58,3 @@ steps:
           run: goreleaser
           shell: false
           tty: true
-
-  - block: ":package: Create a release?"
-    prompt: "Fill out the tag to create for this release"
-    branches:
-      - main
-    blocked_state: passed
-    fields:
-      - key: release-tag
-        text: Tag
-        required: true
-        hint: "Eg: v0.28.0"
-
-  - label: ":rocket: Pushing a tag to release"
-    command: ".buildkite/tag.sh"
-    branches:
-      - main
-    env:
-      AWS_REGION: us-east-1
-    plugins:
-      - aws-assume-role-with-web-identity:
-          role-arn: arn:aws:iam::445615400570:role/pipeline-buildkite-buildkite-mcp-server
-      - aws-ssm#v1.1.0:
-          parameters:
-            GITHUB_TOKEN: /pipelines/buildkite/buildkite-mcp-server/github-token
-            GITHUB_USER: /pipelines/buildkite/buildkite-mcp-server/github-user
