chore: update the progress output format for docker compose

--- a/.buildkite/pipeline.release.yml
+++ b/.buildkite/pipeline.release.yml
@@ -23,6 +23,7 @@ steps:
           run: goreleaser
           shell: false
           tty: true
+          progress: plain
 
   - wait: ~
 
@@ -52,3 +53,4 @@ steps:
           run: goreleaser
           shell: false
           tty: true
+          progress: plain
