fix: add GHCR login during release to push images

--- a/.buildkite/pipeline.release.yml
+++ b/.buildkite/pipeline.release.yml
@@ -41,6 +41,7 @@ steps:
             - pipeline_slug
       - aws-ssm#v1.0.0:
           parameters:
+            GITHUB_USER: /pipelines/buildkite/buildkite-mcp-server-release/github-user
             GITHUB_TOKEN: /pipelines/buildkite/buildkite-mcp-server-release/github-token
             DOCKERHUB_PASSWORD: /pipelines/buildkite/buildkite-mcp-server-release/dockerhub-password
             DOCKERHUB_USER: /pipelines/buildkite/buildkite-mcp-server-release/dockerhub-user
@@ -54,6 +55,7 @@ steps:
             - --merge
           config: .buildkite/docker-compose.yaml
           env:
+            - GITHUB_USER
             - GITHUB_TOKEN
             - DOCKERHUB_USER
             - DOCKERHUB_PASSWORD
