chore: linting updates so you can now format with make lint-fix
Adds a neat way to manage import grouping and ensures it is easy to sort things out before commit.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -20,9 +20,18 @@ linters:
       - builtin$
       - examples$
 formatters:
+  enable:
+    - gci
+    - gofmt
+  settings:
+    gci:
+      sections:
+        - standard
+        - default
   exclusions:
     generated: lax
     paths:
       - third_party$
       - builtin$
       - examples$
+
