feat: this adds toolsets with optional dynamic tools as well
This feature allows selection of the following options:

* Default: 29 tools (all toolsets)
* Read-only: 25 tools (filtered out 4 write operations)
* Specific toolsets: 8 tools (4 pipeline + 4 log tools)
* Dynamic enabled: 32 tools (29 + 3 introspection tools)
* Combined: 12 tools (5 read-only build tools + 4 read-only test tools + 3 introspection tools)

Also add scopes to tools and provide dynamic tool to report on them

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,6 +28,12 @@ formatters:
       sections:
         - standard
         - default
+    gofmt:
+      rewrite-rules:
+        - pattern: "interface{}"
+          replacement: "any"
+        - pattern: "a[b:len(a)]"
+          replacement: "a[b:]"
   exclusions:
     generated: lax
     paths:
